# symkit-mcp

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONSTITUTION.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: copilot-instructions.md  zotero-research-workflow.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/bylaws/: ddd-architecture.md  git-workflow.md  python-environment.md
.github/workflows/: release.yml
.superpowers/sdd/: task-1-report.md
docs/: composable-formula-modification-engine.md  design-evolution-derivation-framework.md  domain-audio-circuits.md  reproducible-derivation-tools.md  symkit-design.md  symkit-design.zh-CN.md  symkit-vs-sympy-mcp.md  template-system-design.md  value-proposition-analysis.md
docs/examples/: power-amp-coupling-capacitor.md
docs/superpowers/plans/: 2026-07-08-pde-vector-operator-parsing-plan.md
docs/superpowers/specs/: 2026-07-08-pde-vector-operator-parsing-design.md
formulas/: README.md  README.zh-CN.md
src/symkit/: __init__.py
src/symkit/application/: __init__.py  use_cases.py
src/symkit/domain/: __init__.py  assumption_engine.py  derivation_goal.py  derivation_pattern.py  derivation_planner.py  derivation_session.py  entities.py  expression_parser.py  formula.py  formula_library.py  formula_recommender.py  formula_search_query.py  math_domain.py  paths.py  services.py  step_verifier.py  symbol_registry.py  value_objects.py
src/symkit/infrastructure/: __init__.py  derivation_repository.py  sympy_engine.py  verifier.py
src/symkit/infrastructure/adapters/: __init__.py  base.py  biomodels.py  local_formula.py  scipy_constants.py  wikidata_formulas.py
src/symkit/resources/: __init__.py  formula_search_config.yaml
src/symkit/resources/seed_formulas/fluid_dynamics/: continuity_incompressible.yaml  euler_equations_inviscid.yaml  reynolds_number.yaml
src/symkit/resources/seed_formulas/mechanics/: newtons_second_law.yaml
src/symkit_mcp/: __init__.py  server.py
src/symkit_mcp/tools/: __init__.py  _expression_parser.py  _state.py  assumptions.py  codegen.py  formula.py  math.py  orchestration.py  session.py  symbols.py
templates/archive/: README.md  rc_lowpass.yaml
tests/: __init__.py  conftest.py  test_derivation_engine.py  test_derivation_examples.py  test_derivation_examples_extended.py  test_derivation_goal.py  test_derivation_planner.py  test_domain.py  test_domain_services.py  test_expression_parser.py  test_external_adapters.py  test_formula_recommender.py  test_formula_search.py  test_math_transforms.py  test_mcp_e2e.py  test_mcp_minimal.py  test_orchestration_external.py  test_orchestration_tools.py  test_session_goal_tools.py  test_session_tools.py  test_session_verification.py  test_session_verify_tools.py  test_step_crud.py  test_step_verifier.py  test_sympy_engine.py  test_unified_math_coverage.py
