[project]
name = "symkit-mcp"
version = "1.0.0"
description = "SymKit MCP - Symbolic derivation and verification toolkit for AI agents via MCP."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [
    { name = "SymKit Team" }
]
keywords = [
    "mcp",
    "symbolic-reasoning",
    "formula-derivation",
    "sympy",
    "ai-agents",
    "model-context-protocol",
    "symbolic-computation",
    "verification",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core symbolic computation
    "sympy>=1.13",
    # LaTeX parsing backend for sympy.parsing.latex
    "antlr4-python3-runtime>=4.11,<4.12",
    # MCP SDK with FastMCP
    "mcp>=1.0.0",
    # Data validation
    "pydantic>=2.0",
    # YAML parsing for DSL
    "pyyaml>=6.0",
    # HTTP client for external APIs (Wikidata, BioModels)
    "httpx>=0.27",
    # Per-user data directory resolution (sessions, derived formulas)
    "platformdirs>=4.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
symkit-mcp = "symkit_mcp.server:main"

[project.urls]
Homepage = "https://github.com/u9401066/symkit-mcp"
Documentation = "https://github.com/u9401066/symkit-mcp/tree/master/docs"
Repository = "https://github.com/u9401066/symkit-mcp"
Issues = "https://github.com/u9401066/symkit-mcp/issues"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/symkit", "src/symkit_mcp"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["symkit", "symkit_mcp"]

[tool.ruff.lint.per-file-ignores]
"src/symkit/infrastructure/sympy_engine.py" = ["ARG002"]
"src/symkit/domain/assumption_engine.py" = ["UP042"]
"src/symkit/domain/derivation_pattern.py" = ["UP042"]
"src/symkit/domain/entities.py" = ["UP042"]
"src/symkit/domain/math_domain.py" = ["UP042"]
"src/symkit/domain/symbol_registry.py" = ["UP042"]
"src/symkit/domain/value_objects.py" = ["UP042"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

# MCP tool decorators lack complete type annotations, allow untyped decorators
disallow_untyped_decorators = false

# Allow missing type stubs for third-party libraries
[[tool.mypy.overrides]]
module = [
    "sympy.*",
    "mcp.*",
    "yaml.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
markers = [
    "e2e: End-to-end MCP smoke tests",
]

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "black>=26.1.0",
    "pylint>=4.0.4",
    "safety>=3.7.0",
]
